more on transformer

--- a/machine-learning-note/transformer/transformer_basics.ipynb
+++ b/machine-learning-note/transformer/transformer_basics.ipynb
@@ -7,7 +7,9 @@
     "# Transformer\n",
     "\n",
     "Nowadays transformer is a popular neural network structure in NLP. Compared to RNN, it allows more context information to flow through the net, achieving more precise result.\n",
-    "and it can be trained more parallelly, requiring less time to train and perform inference. in this notebook, I'm going to clarify how a transform works."
+    "and it can be trained more parallelly, requiring less time to train and perform inference. in this notebook, I'm going to clarify how a transform works.\n",
+    "\n",
+    "A transformer usually consists of an encoder-decoder structure. where the encoder maps the input sequence of symbol representations $(x_1, x_2, ..., x_n)$ to a sequence of continuous representations $\\mathbf{z} = (z_1, z_2, ..., z_n)$. Given $\\mathbf{z}$, the decoder generate an output sequence $(y_1, y_2, ..., y_m)$ of symbols one by one. At each step the model is auto-regressive, consuming the previously generated symbols as additional input when generating the next."
    ]
   },
   {
