--- a/misc-topics/pandas_abc_demo.ipynb
+++ b/misc-topics/pandas_abc_demo.ipynb
@@ -2,31 +2,47 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
+    "\n",
+    "# Set pandas.DataFrame display options: https://pandas.pydata.org/pandas-docs/stable/reference/api/pandas.set_option.html\n",
+    "# display all rows and columns\n",
+    "pd.set_option('display.max_rows', None)\n",
+    "pd.set_option('display.max_columns', None)\n",
+    "# display a whole column data without folding\n",
+    "pd.set_option('display.max_colwidth', None)\n",
+    "\n",
+    "\n",
     "import matplotlib.pyplot as plt"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
-   "source": [
-    "benchmark_file = \"./profile_server.csv\""
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Number of rows: 34\n",
+      "Number of columns: 9\n",
+      "Header: Index(['text_length', 'batch_size', 'worker_num', 'QPS', 'throughput(token/s)',\n",
+      "       'latency.avg(ms)', 'latency.p90(ms)', 'latency.p95(ms)',\n",
+      "       'latency.p99(ms)'],\n",
+      "      dtype='object')\n"
+     ]
+    }
+   ],
    "source": [
     "# Load the CSV file into a DataFrame\n",
+    "benchmark_file = \"./profile_server.csv\"\n",
     "df = pd.read_csv(benchmark_file)\n",
+    "\n",
+    "# display overview information\n",
     "num_rows, num_cols = df.shape\n",
     "print(f\"Number of rows: {num_rows}\")\n",
     "print(f\"Number of columns: {num_cols}\")\n",
@@ -42,14 +58,33 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# extract row(s) data\n",
     "# the 32th row\n",
     "df.iloc[31]\n",
-    "\n",
     "# the rows from the 11th to the 20th\n",
     "df.iloc[10:20]\n",
-    "\n",
     "# display the first 10 rows\n",
-    "df.head(n=10)\n"
+    "df.head(n=10)\n",
+    "# display the last 5 rows\n",
+    "df.tail(n=5)\n",
+    "\n",
+    "# filter rows by column data\n",
+    "\"\"\"\n",
+    "# assume that there is a column called `service_name`, extract rows whose service_name field contain \"risk\" substring\n",
+    "risk_service_df = df[df[\"service_name\"].str.contains(\"risk\", regex=False)]\n",
+    "# assume that there is a column called `charge_item`, extract rows whose charge_item field contain either \"cpu\" or \"mem\" substring\n",
+    "resource_usage_df = df[df[\"charge_item\"].str.contains(\"cpu|mem\", regex=True)]\n",
+    "\"\"\"\n",
+    "\n",
+    "# Filter the DataFrame using multiple conditions\n",
+    "\"\"\"\n",
+    "filtered_df = df[(df[qps] >= 800) & (df[throughput] >= 500000)]\n",
+    "\"\"\"\n",
+    "\n",
+    "\n",
+    "# display only specified columns\n",
+    "filtered_columns = ['text_length', 'batch_size', 'QPS', 'throughput(token/s)', 'latency.avg(ms)', 'latency.p99(ms)']\n",
+    "df[filtered_columns].head(n=5)"
    ]
   },
   {
@@ -58,10 +93,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Get unique values\n",
+    "# Get unique values of a column\n",
     "unique_text_length = df['text_length'].unique()\n",
     "print(\"Unique values using unique():\", unique_text_length)\n",
-    "\n",
     "# Get the number of unique values\n",
     "unique_count = df['text_length'].nunique()\n",
     "print(\"Number of unique values using nunique():\", unique_count)"
@@ -73,8 +107,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#df[\"text_length\"]\n",
+    "# groupby sytax\n",
+    "\"\"\"\n",
+    "# assume there are `item_type`, `sales` columns in df, aggregate total sales for each item_type\n",
+    "sales_by_item_type = df.groupby(\"item_type\")[\"sales\"].sum()\n",
+    "\"\"\"\n",
+    "\n",
+    "# mathematics statistics\n",
+    "#df[\"QPS\"].min()\n",
     "#df[\"QPS\"].max()\n",
+    "#df[\"QPS\"].mean()\n",
+    "#df[\"QPS\"].median()\n",
+    "\n",
     "# Find the row with the maximum QPS\n",
     "max_qps_row = df.loc[df[qps].idxmax()]\n",
     "# Print the row with the maximum QPS\n",
@@ -83,7 +127,7 @@
     "\n",
     "max_throughtpus_row = df.loc[df[throughput].idxmax()]\n",
     "print(\"Max throughput:\")\n",
-    "print(max_throughtpus_row)\n"
+    "print(max_throughtpus_row)"
    ]
   },
   {
@@ -270,15 +314,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df.columns"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "# Get unique values\n",
     "unique_text_length = df['category'].unique()\n",
     "print(\"Unique values using unique():\", unique_text_length)"
@@ -384,7 +419,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "llm-env",
    "language": "python",
    "name": "python3"
   },
@@ -398,7 +433,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.6"
+   "version": "3.11.11"
   }
  },
  "nbformat": 4,
