--- a/machine-learning-note/tritonserver-note/triton-scaffold.ipynb
+++ b/machine-learning-note/tritonserver-note/triton-scaffold.ipynb
@@ -200,110 +200,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Help on _ArrayFunctionDispatcher in module numpy:\n",
-      "\n",
-      "argmax(a, axis=None, out=None, *, keepdims=<no value>)\n",
-      "    Returns the indices of the maximum values along an axis.\n",
-      "\n",
-      "    Parameters\n",
-      "    ----------\n",
-      "    a : array_like\n",
-      "        Input array.\n",
-      "    axis : int, optional\n",
-      "        By default, the index is into the flattened array, otherwise\n",
-      "        along the specified axis.\n",
-      "    out : array, optional\n",
-      "        If provided, the result will be inserted into this array. It should\n",
-      "        be of the appropriate shape and dtype.\n",
-      "    keepdims : bool, optional\n",
-      "        If this is set to True, the axes which are reduced are left\n",
-      "        in the result as dimensions with size one. With this option,\n",
-      "        the result will broadcast correctly against the array.\n",
-      "\n",
-      "        .. versionadded:: 1.22.0\n",
-      "\n",
-      "    Returns\n",
-      "    -------\n",
-      "    index_array : ndarray of ints\n",
-      "        Array of indices into the array. It has the same shape as `a.shape`\n",
-      "        with the dimension along `axis` removed. If `keepdims` is set to True,\n",
-      "        then the size of `axis` will be 1 with the resulting array having same\n",
-      "        shape as `a.shape`.\n",
-      "\n",
-      "    See Also\n",
-      "    --------\n",
-      "    ndarray.argmax, argmin\n",
-      "    amax : The maximum value along a given axis.\n",
-      "    unravel_index : Convert a flat index into an index tuple.\n",
-      "    take_along_axis : Apply ``np.expand_dims(index_array, axis)``\n",
-      "                      from argmax to an array as if by calling max.\n",
-      "\n",
-      "    Notes\n",
-      "    -----\n",
-      "    In case of multiple occurrences of the maximum values, the indices\n",
-      "    corresponding to the first occurrence are returned.\n",
-      "\n",
-      "    Examples\n",
-      "    --------\n",
-      "    >>> a = np.arange(6).reshape(2,3) + 10\n",
-      "    >>> a\n",
-      "    array([[10, 11, 12],\n",
-      "           [13, 14, 15]])\n",
-      "    >>> np.argmax(a)\n",
-      "    5\n",
-      "    >>> np.argmax(a, axis=0)\n",
-      "    array([1, 1, 1])\n",
-      "    >>> np.argmax(a, axis=1)\n",
-      "    array([2, 2])\n",
-      "\n",
-      "    Indexes of the maximal elements of a N-dimensional array:\n",
-      "\n",
-      "    >>> ind = np.unravel_index(np.argmax(a, axis=None), a.shape)\n",
-      "    >>> ind\n",
-      "    (1, 2)\n",
-      "    >>> a[ind]\n",
-      "    15\n",
-      "\n",
-      "    >>> b = np.arange(6)\n",
-      "    >>> b[1] = 5\n",
-      "    >>> b\n",
-      "    array([0, 5, 2, 3, 4, 5])\n",
-      "    >>> np.argmax(b)  # Only the first occurrence is returned.\n",
-      "    1\n",
-      "\n",
-      "    >>> x = np.array([[4,2,3], [1,0,3]])\n",
-      "    >>> index_array = np.argmax(x, axis=-1)\n",
-      "    >>> # Same as np.amax(x, axis=-1, keepdims=True)\n",
-      "    >>> np.take_along_axis(x, np.expand_dims(index_array, axis=-1), axis=-1)\n",
-      "    array([[4],\n",
-      "           [3]])\n",
-      "    >>> # Same as np.amax(x, axis=-1)\n",
-      "    >>> np.take_along_axis(x, np.expand_dims(index_array, axis=-1), axis=-1).squeeze(axis=-1)\n",
-      "    array([4, 3])\n",
-      "\n",
-      "    Setting `keepdims` to `True`,\n",
-      "\n",
-      "    >>> x = np.arange(24).reshape((2, 3, 4))\n",
-      "    >>> res = np.argmax(x, axis=1, keepdims=True)\n",
-      "    >>> res.shape\n",
-      "    (2, 1, 4)\n",
-      "\n"
-     ]
-    }
-   ],
-   "source": [
-    "help(np.argmax)"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
@@ -385,6 +281,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# SERVER Management APIs\n",
     "print(triton_client.is_server_live())\n",
     "print(triton_client.is_server_ready())\n",
     "print(triton_client.is_model_ready(model_name=model_name))\n",
